# Fast5x5

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  analysis.R  cholesky.cpp  custom_scal.txt  eigen_scal.txt  fast5x5.hpp  fast_matrix.hpp  matrix_product_custom.cpp  matrix_product_eigen.cpp  measure_perf.sh  tests.cpp
benchmark/: benchmark.sh  gemm_custom.cpp
benchmark_plots/: gemm_blaze.py  gemm_eigen.py  gemm_fastor.py  prune_data.py
benchmark_plots/processed_data/: coord_transform_data.csv  gemm_data.csv
docker/: .gitignore  Dockerfile  Dockerfile-extracts  Dockerfile-xsimd  build.sh  push-xsimd.sh  run-xsimd.sh  run.sh
docker/kokkos/: Dockerfile  build.sh  push.sh  run.sh
docker/xsimd/: Dockerfile  build.sh  run.sh
include/: fast5x5.hpp
include/benchmark/: gemm_header.h
include/benchmarks/: gemm_blaze.h  gemm_custom.h  gemm_eigen.h  gemm_header.h  gemm_simple.h  inversion_blaze.h  inversion_custom.h  inversion_eigen.h  mat_coord_transform.hpp  mat_inv.hpp  mat_mul.hpp  mat_sim.hpp  random.hpp  similarity_eigen.h
include/benchmarks/coord-transform/boundToFree/: blaze.h  custom.h  eigen.h  fastor.h
include/benchmarks/coord-transform/freeToBound/: blaze.h  custom.h  eigen.h  fastor.h
include/benchmarks/gemm/: blaze.h  custom.h  eigen.h  fastor.h  gemm_blaze.h  gemm_custom.h  gemm_eigen.h  gemm_header.h  gemm_simple.h  simple.h
include/benchmarks/inversion/: blaze.h  custom.h  eigen.h  fastor.h  inversion_blaze.h  inversion_custom.h  inversion_eigen.h
include/benchmarks/shared/: common.hpp  random.hpp
include/benchmarks/similarity/: blaze.h  custom.h  eigen.h  fastor.h  similarity_blaze.h  similarity_custom.h  similarity_eigen.h
include/fast5x5/: fast5x5.hpp
libs/: CMakeLists.txt
plots/: generate_backend_plots.py  generate_general_plots.py  generate_plots.py
plots/original_data/: coord_transform_data.csv  gemm_data.csv  inversion_data.csv  similarity_data.csv
plots/processed_data/: inversion_data.csv  similarity_data.csv
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  gemm_eigen.cpp  gemm_simple.cpp
src/benchmarks/: CMakeLists.txt  bench_mat_inv.cpp  bench_mat_mul.cpp  benchmark.cpp  combined_benchmark.cpp  coord_transform_benchmark.cpp  gemm_benchmark.cpp  inversion_benchmark.cpp  similarity_benchmark.cpp
src/test/: CMakeLists.txt  run_all.cpp  unit_inverse.cpp  unit_matrix.cpp  unit_operator.cpp  unit_vector.cpp
test/: CMakeLists.txt  run_all.cpp  unit_inverse.cpp  unit_matrix.cpp  unit_operator.cpp  unit_vector.cpp
tests/: unit_operator.cpp
